--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
-cmake_minimum_required(VERSION 3.5)
+cmake_minimum_required(VERSION 3.15)
 
-project(Redis VERSION 1.0 LANGUAGES CXX)
+project(Redis VERSION 1.0.0 LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
@@ -14,11 +14,23 @@ include_directories(
   ${CMAKE_SOURCE_DIR}/table
 )
 
+set(HEADERS
+  ${CMAKE_SOURCE_DIR}/interface/interface.h
+)
+
+set(SOURCES
+  ${CMAKE_SOURCE_DIR}/interface/interface.cc
+)
+
+set(PROJECT_SOURCES
+  ${HEADERS}
+  ${SOURCES}
+  ${CMAKE_SOURCE_DIR}/main.cc
+)
+
 add_executable(
   ${PROJECT_NAME}
-  interface/interface.h
-  interface/interface.cc
-  main.cc
+  ${PROJECT_SOURCES}
 )
 
 add_subdirectory(
@@ -33,52 +45,91 @@ add_subdirectory(
   ${CMAKE_SOURCE_DIR}/table
 )
 
+target_compile_options(
+  ${PROJECT_NAME}
+  PRIVATE
+  -Wall
+  -Werror
+  -Wextra
+  -Wpedantic
+  -fsanitize=address
+  -Wno-ignored-qualifiers
+  -Wno-unused-parameter
+  -Wno-sign-compare
+)
+
 target_link_libraries(
   ${PROJECT_NAME}
+  PRIVATE
   BPlusTreeLibrary
   HashTableLibrary
   SelfBalancingBinarySearchTreeLibrary
+  -fsanitize=address
 )
+
+set_target_properties(${PROJECT_NAME} PROPERTIES
+  MACOSX_BUNDLE_GUI_IDENTIFIER my.example.com
+  MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
+  MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
+  MACOSX_BUNDLE TRUE
+  WIN32_EXECUTABLE TRUE
+)
+
+# Add cppcheck
+find_program(CPPCHECK cppcheck)
 
 file(GLOB_RECURSE ALL_SOURCE_FILES *.cc *.h *.inc)
+list(FILTER ALL_SOURCE_FILES EXCLUDE REGEX ".*googletest.*")
 
-add_custom_target(
-        style
-        COMMAND clang-format
-        -style=Google
-        --verbose
-        -n
-        ${ALL_SOURCE_FILES}
-)
+if(CPPCHECK)
+  message(STATUS "cppcheck found: ${CPPCHECK}")
+  list(
+    APPEND CPPCHECK_ARGS
+    "--enable=all"
+    "--inconclusive"
+    "--quiet"
+    "--language=c++"
+    "--std=c++17"
+    "--verbose"
+    "--suppress=unusedFunction"
+    "--suppress=missingInclude"
+    "--suppress=unusedStructMember"
+    "--suppress=variableScope"
+    "--suppress=functionStatic"
+    "--suppress=constStatement"
+    "--suppress=cppcheckError"
+    "--suppress=constParametr"
+    "--suppress=passedByValue"
+    "--suppress=missingReturn"
+    "--suppress=constParameter"
+    "--suppress=operatorEqMissingReturnStatement"
+    "--suppress=postfixOperator"
+    "--suppress=unmatchedSuppression"
+    "--suppress=*:${PROJECT_SOURCE_DIR}/lib/*"
+  )
+  add_custom_target(
+    cppcheck
+    COMMAND ${CPPCHECK} ${CPPCHECK_ARGS} ${ALL_SOURCE_FILES}
+  )
+else()
+  message(STATUS "cppcheck not found")
+endif()
 
-add_custom_target(
-        clangformat
-        COMMAND clang-format
-        -style=Google
-        --verbose
-        -i
-        ${ALL_SOURCE_FILES}
-)
+# Add clang-format
+find_program(CLANG_FORMAT clang-format)
 
-add_custom_target(
-        cppcheck
-        COMMAND cppcheck
-        --enable=all
-        --inconclusive
-        --language=c++
-        --std=c++17
-        --verbose
-        --suppress=cppcheckError
-        --suppress=constParametr
-        --suppress=useStlAlgorithm
-        --suppress=functionStatic
-        --suppress=passedByValue
-        --suppress=missingReturn
-        --suppress=constParameter
-        --suppress=operatorEqMissingReturnStatement
-        --suppress=postfixOperator
-        --suppress=unmatchedSuppression
-        --suppress=missingInclude
-        --quiet
-        ${ALL_SOURCE_FILES}
-)
+if(CLANG_FORMAT)
+  message(STATUS "clang-format found: ${CLANG_FORMAT}")
+  list(
+    APPEND CLANG_ARGS
+    "-i"
+    "-style=Google"
+    "--verbose"
+  )
+  add_custom_target(
+    clang-format
+    COMMAND ${CLANG_FORMAT} ${CLANG_ARGS} ${ALL_SOURCE_FILES}
+  )
+else()
+  message(STATUS "clang-format not found")
+endif()
